Added random letter generation
Allows user to select random vowel or consonant. Frequencies based on
the actual game show, available at: thecountdownpage.com/letters

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,9 +27,14 @@
 			<button id=vowel>Vowel</button>
 			<button id=consonant>Consonant</button>
 			
+			<input id=playerWord>
+			
+			<p id=largestWord>
 		</article>
+		<aside id=playerScore
 		<footer>
 			<p>WEBRES Sprint 2 Group 6</p>
 		</footer>
 	</body>
+	<script src=client.js></script>
 </html>
