Letter selection developed more
Users can choose to select a vowel or consonant depending on their text
input (V or C, need to add more validation). Only 9 can be selected, as
intended.

--- a/pages/index.html
+++ b/pages/index.html
@@ -10,9 +10,7 @@
 			<canvas id=clock>
 			
 			</canvas>
-			
-			<div id=letters>
-				<ul>
+				<ul id=letters>
 					<li id=1>
 					<li id=2>
 					<li id=3>
@@ -23,15 +21,13 @@
 					<li id=8>
 					<li id=9>
 				</ul>
-			</div>
-			<button id=vowel>Vowel</button>
-			<button id=consonant>Consonant</button>
+			<p><button id=startGame>Start Game</button></p>
 			
-			<input id=playerWord>
+			<p><input id=playerWord></p>
 			
 			<p id=largestWord>
 		</article>
-		<aside id=playerScore
+		<aside id=playerScore></aside>
 		<footer>
 			<p>WEBRES Sprint 2 Group 6</p>
 		</footer>
