--- a/pages/index.html
+++ b/pages/index.html
@@ -8,18 +8,17 @@
 		</header>
 		<article id=gameScreen>
 			<canvas id=clock width=300px height=300px>
-			
 			</canvas>
 				<ul id=letters>
-					<li id=1> 
-					<li id=2> 
-					<li id=3> 
-					<li id=4> 
-					<li id=5> 
-					<li id=6> 
-					<li id=7> 
-					<li id=8> 
-					<li id=9> 
+					<li id=1>
+					<li id=2>
+					<li id=3>
+					<li id=4>
+					<li id=5>
+					<li id=6>
+					<li id=7>
+					<li id=8>
+					<li id=9>
 				</ul>
 			<div id=playerInput>
 				<p><button id=startGame>Start Game</button></p>
@@ -27,16 +26,13 @@
 				<p><input id=playerWord></p>
 				<p id=largestWord>
 			</div>
-			
-			
-			
-			
 		</article>
 		<aside id=playerScore></aside>
 		<footer>
 			<p>WEBRES Sprint 2 Group 6</p>
 		</footer>
 	</body>
+	<script src=/socket.io/socket.io.js></script>
 	<script src=clock.js></script>
 	<script src=client.js></script>
 </html>
