Separated game and start screen

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,32 +14,9 @@
 				 points. The player with the most points wins the game.</p>
 			<p>To start, choose either of the options. Multiplayer games will be matchmade automatically,
 			your opponent will be random!</p>
-			<p><button id=solo>Start a solo game</button></p>
-			<p><button id=multi>Start a multiplayer game</button></p>
+			<p><a href=game.html><button id=solo>Start a solo game</button></a></p>
+			<p><a href=game.html><button id=multi>Start a multiplayer game</button></a></p>
 		</article>
-		<article id=gameScreen>
-			<div id=cnvWrap>
-				<canvas id=clock width=300px height=300px>
-				</canvas>
-			</div>
-				<ul id=letters>
-					<li id=1>
-					<li id=2>
-					<li id=3>
-					<li id=4>
-					<li id=5>
-					<li id=6>
-					<li id=7>
-					<li id=8>
-					<li id=9>
-				</ul>
-			<div id=playerInput>
-				<p><button id=vowel>Vowel</button><button id=consonant>Consonant</button>
-				<p><input id=playerWord></p>
-				<p id=largestWord>
-			</div>
-		</article>
-		<aside id=playerScore></aside>
 		<footer>
 			<p>WEBRES Sprint 2 Group 6</p>
 		</footer>
