Better styling to game screen

--- a/pages/index.html
+++ b/pages/index.html
@@ -14,6 +14,7 @@
 				 points. The player with the most points wins the game.</p>
 			<p>To start, choose either of the options. Multiplayer games will be matchmade automatically,
 			your opponent will be random!</p>
+			<p id=name>Enter a name: <input id=playerName></p>
 			<p><a href=game.html><button id=solo>Start a solo game</button></a></p>
 			<p><a href=game.html><button id=multi>Start a multiplayer game</button></a></p>
 		</article>
