--- a/pages/game.html
+++ b/pages/game.html
@@ -9,27 +9,30 @@
 		</header>
 		<article id=gameScreen>
 			<div id=cnvWrap>
+        <p id=timeLeft>30</p>
 				<canvas id=clock width=300px height=300px>
 				</canvas>
 			</div>
 				<ul id=letters>
-					<li id=1>
-					<li id=2>
-					<li id=3>
-					<li id=4>
-					<li id=5>
-					<li id=6>
-					<li id=7>
-					<li id=8>
-					<li id=9>
+					<li id=1>T
+					<li id=2>O
+					<li id=3>E
+					<li id=4>S
+					<li id=5>C
+					<li id=6>R
+					<li id=7>I
+					<li id=8>E
+					<li id=9>N
 				</ul>
-			<div id=playerInput>
 				<p><button id=vowel>Vowel</button><button id=consonant>Consonant</button>
-				<p><input id=playerWord></p>
-				<p id=largestWord>
-			</div>
+				<p id=wordInput>Enter your word: <input id=playerWord></p>
 		</article>
-		<aside id=playerScore></aside>
+		<aside id=info>
+      <h2>Information</h2>
+      <p id=roomID>Room ID: </p>
+      <p id=p1>Player 1: _____</p>
+      <p id=p2>Player 2: _____</p>
+    </aside>
 		<footer>
 			<p>WEBRES Sprint 2 Group 6</p>
 		</footer>
