--- a/pages/index.html
+++ b/pages/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<link rel=stylesheet href=style.css>
@@ -6,18 +7,34 @@
 		<header>
 			<h1>DOWNCOUNT</h1>
 		</header>
-		<article id=splashScreen>
-			<h2>And your countdown starts ... now!</h2>
-			<p>Welcome to Countdown, a popular game show from Channel 4 bought to the
-				 internet! Either on your own or with another player, the aim is to make
-				 the largest word from a choice of nine letters in 30 seconds. The longest and valid word will win
-				 points. The player with the most points wins the game.</p>
-			<p>To start, choose either of the options. Multiplayer games will be matchmade automatically,
-			your opponent will be random!</p>
-			<p id=name>Enter a name: <input id=playerName></p>
-			<p><a href=game.html><button id=solo>Start a solo game</button></a></p>
-			<p><a href=game.html><button id=multi>Start a multiplayer game</button></a></p>
+		<article id=gameScreen>
+			<div id=cnvWrap>
+        <p id=timeLeft>30</p>
+				<canvas id=clock width=300px height=300px>
+				</canvas>
+			</div>
+				<ul id=letters>
+					<li id=1>
+					<li id=2>
+					<li id=3>
+					<li id=4>
+					<li id=5>
+					<li id=6>
+					<li id=7>
+					<li id=8>
+					<li id=9>
+				</ul>
+				<p><button id=vowel>Vowel</button><button id=consonant>Consonant</button>
+				<p>Enter your word: <input id=playerWord></p>
+        <p id=wasItRight></p>
+        <button id=startAgain>Another around?</button>
 		</article>
+		<aside id=info>
+      <h2>Information</h2>
+      <p id=roomID>Room ID: </p>
+      <p id=p1>Player 1: _____</p>
+      <p id=p2>Player 2: _____</p>
+    </aside>
 		<footer>
 			<p>WEBRES Sprint 2 Group 6</p>
 		</footer>
