--- a/pages/index.html
+++ b/pages/index.html
@@ -25,7 +25,7 @@
 					<li id=9>
 				</ul>
 				<p><button id=vowel>Vowel</button><button id=consonant>Consonant</button>
-				<p>Enter your word: <input id=playerWord></p>
+				<p>Enter your word: <input id=playerWord onkeydown="return validAnswer(event)"></p>
         <p id=wasItRight></p>
         <button id=startAgain>Another around?</button>
 		</article>
