Better UI and such

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,12 +7,14 @@
 		<header>
 			<h1>DOWNCOUNT</h1>
 		</header>
+		<aside id=info>
+			<h2>Information</h2>
+			<p>Room ID: <span id=roomID></span></p>
+			<p>Your score: <span id=p1></span></p>
+		</aside>
 		<article id=gameScreen>
 			<p id=timer>Clock broke due to broke, heres a digital count: <span id=timeLeft>30</span>
-			<div id=cnvWrap>
-				<canvas id=clock width=300px height=300px>
-				</canvas>
-			</div>
+			<p><img src=img/clock.jpg alt='Countdown clock'></p>
 				<ul id=letters>
 					<li id=1>
 					<li id=2>
@@ -29,11 +31,6 @@
         <p id=wasItRight></p>
         <button id=startAgain>Another Round?</button>
 		</article>
-		<aside id=info>
-      <h2>Information</h2>
-      <p>Room ID: <span id=roomID></span></p>
-      <p>Your score: <span id=p1></span></p>
-    </aside>
 		<footer>
 			<p>WEBRES Sprint 2 Group 6</p>
 		</footer>
